# RustMoneyTrackerApi

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
sql/db_initial/: 00_recreate_db.sql  01_create_schema.sql
src/: config.rs  ctx.rs  db_connection.rs  error.rs  log.rs  main.rs  model.rs
src/.cargo/: config.toml
src/_dev_utils/: dev_db.rs  mod.rs
src/model/: base.rs  category.rs  currency.rs  error.rs  exchange.rs  expense.rs  mod.rs  savings.rs  task.rs  user.rs
src/model/store/: error.rs  mod.rs
src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
