[package]
name = "rust-money-tracker-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.6.20", features = ["headers"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
serde_with = "2"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7.13"
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9.0"
lazy-regex = "2"
async-trait = "0.1"
strum_macros = "0.24"
uuid = {version = "1", features = ["v4", "fast-rng"]}