[package]
name = "rust-money-tracker-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# -- Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
serde_with = "2"
# -- Tokio
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7.13"
# -- Web
axum = { version = "0.6.20", features = ["headers"] }
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9.0"
# -- Data
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "time",
] }
sqlb = "0.3"
# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# -- Utils
lazy-regex = "2"
async-trait = "0.1"
strum_macros = "0.24"
uuid = { version = "1", features = ["v4", "fast-rng"] }
serial_test = "2"
